--- a/src/app/component/users/home/home.component.html
+++ b/src/app/component/users/home/home.component.html
@@ -40,8 +40,8 @@
 
             </div>
             <div class="z-40 space-x-0">
-                <img class="h-[400px] w-[400px] z-30  "
-                    src="../../../../assets/image/depressed_home-removebg-preview.png" alt="now">
+                <img class="h-[450px] w-[600px] z-30 brightness-110 contrast-100 "
+                    src="../../../../assets/image/homeNew.png" alt="now">
 
             </div>
 
