--- a/src/app/component/users/chat-user/chat-user.component.html
+++ b/src/app/component/users/chat-user/chat-user.component.html
@@ -56,7 +56,7 @@
 
                             <div class="flex items-center gap-4 pl-4 ">
                                 <img alt="Women"
-                                    [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.expert._id)  + '?s=360'"
+                                    [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimalExperts(item.expert._id)+'?s=360'"
                                     class="h-12 w-12 rounded-lg object-cover" />
 
                                 <div>
@@ -81,7 +81,7 @@
 
                                         <div class="flex items-center gap-4 pl-4 ">
                                             <img alt="Women"
-                                                [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.expert._id)  + '?s=360'"
+                                                [src]="'https://avatars2.githubusercontent.com/u/'+ hexToDecimalExperts(item.expert._id)+'?s=360'"
                                                 class="h-12 w-12 rounded-lg object-cover" />
 
                                             <div>
@@ -115,7 +115,7 @@
                                 <div class="flex items-center gap-4 pl-4 " *ngFor="let item of  ActiveChats">
                                     <ng-container *ngIf="item.expert._id=== selectedExpert">
                                         <img alt="Women"
-                                            [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.expert._id)  + '?s=360'"
+                                            [src]="'https://avatars2.githubusercontent.com/u/'+ hexToDecimalExperts(item.expert._id)+'?s=360'"
                                             class="h-12 w-12 rounded-lg object-cover" />
 
                                         <div>
@@ -133,7 +133,7 @@
                                 <div class="flex items-center gap-4 pl-4 " *ngFor="let item of   previousChatdocs">
                                     <ng-container *ngIf="item.expert._id=== selectedExpert">
                                         <img alt="Women"
-                                            [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.expert._id)  + '?s=360'"
+                                            [src]="'https://avatars2.githubusercontent.com/u/'+ hexToDecimalExperts(item?.expert?._id)+'?s=360'"
                                             class="h-12 w-12 rounded-lg object-cover" />
 
                                         <div>
@@ -150,15 +150,15 @@
 
 
 
-                        <!-- first message of user -->
+                        <!-- first message of expert -->
                         <ng-container *ngFor="let item of chats">
 
                             <div class="  flex  pb-4 pt-4 " *ngIf="item.senderType=='expert' ">
                                 <div class="flex  ">
                                     <div class="mt-8  px-2">
                                         <img class="w-8 h-8 -mt-10 rounded-full "
-                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                                            alt="Rounded avatar">
+                                            [src]="'https://avatars2.githubusercontent.com/u/'+ hexToDecimalExperts(item?.senderId)+'?s=360'" />
+
                                     </div>
                                     <div class="py-2 text-sm px-7  bg-slate-100 rounded-r-lg h-fit">{{item.text}}
                                     </div>
@@ -166,7 +166,7 @@
                             </div>
 
 
-                            <!--first  message from expert -->
+                            <!--first  message from user -->
 
                             <div class="  flex justify-end pb-4 pt-4 " *ngIf="item.senderType=='user'">
 
@@ -178,9 +178,9 @@
                                     </div>
 
                                     <div class="mt-8  ">
-                                        <img class="w-10 h-10 -mt-3 rounded-full  "
-                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                                            alt="Rounded avatar">
+                                        <img class="w-8 h-8 -mt-3 rounded-full  "
+                                            [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.senderId)+'?s=360'" />
+
                                     </div>
                                 </div>
                             </div>
