--- a/src/app/component/users/login/login.component.html
+++ b/src/app/component/users/login/login.component.html
@@ -69,7 +69,7 @@
                 <p class="text-center">OR</p>
                 <hr class="border-gray-400">
             </div>
-            <button
+            <button (click)="loginWithGoogle()"
                 class="bg-white border py-2 w-full rounded-xl mt-5 flex justify-center items-center text-sm hover:scale-105 duration-300">
                 <svg class="mr-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="25px">
                     <path fill="#FFC107"
