--- a/src/app/component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/component/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="flex bg-cover bg-center  h-full"
     style=" background-image: url('../../../../assets/image/admindashboard.png'); ">
     <app-navsidebar></app-navsidebar>
-    <div *ngIf="loadingspinner==true">
+    <!-- <div *ngIf="loadingspinner==true">
         <div>
             <div class="ml-[800px] mt-52">
                 <ng-container *ngIf="loadingspinner==true">
@@ -9,8 +9,8 @@
                 </ng-container>
             </div>
         </div>
-    </div>
-    <ng-container *ngIf="loadingspinner==false">
+    </div> -->
+    <!-- <ng-container *ngIf="loadingspinner==false"> -->
         <main class=" min-w-0 flex-1 overflow-auto pt-16 ml-80  ">
 
             <div class="  fixed rounded-2xl z-40 top-0  shadow-lg bg-white border w-fit  p-10 pl-5 pr-6 ">
@@ -114,10 +114,10 @@
                                     Name
                                 </th>
                                 <th scope="col" class="px-6 py-3">
-                                    video
+                                    Chat
                                 </th>
                                 <th scope="col" class="px-6 py-3">
-                                    Chat
+                                    Video
                                 </th>
                                 <th scope="col" class="px-6 py-3">
                                     Total
@@ -126,7 +126,7 @@
 
                             </tr>
                         </thead>
-                        <tbody>
+                         <tbody> 
                             <tr *ngFor="let item of  earningsByExpert;let i =index"
                                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
                                 <td class="px-6 py-4 ">
@@ -138,17 +138,21 @@
                                 <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                                     {{item.expertName}}
                                 </td>
+                               
                                 <ng-container *ngFor="let item2 of item.earningsByBookingType">
                                     <ng-container *ngIf="item2.bookingType== 'video' ">
                                         <td class="px-6 py-4 text-gray-900 font-medium ">
                                             {{item2.totalEarnings}} ₹
                                         </td>
                                     </ng-container>
-                                    <ng-container *ngIf="item2.bookingType== 'chat' ">
+
+                                    <ng-container *ngIf="item2.bookingType== 'chat' " >
                                         <td class="px-6 py-4 text-gray-900 font-medium">
                                             {{item2.totalEarnings}} ₹
                                         </td>
+                                     
                                     </ng-container>
+                                   
                                 </ng-container>
                                 <td class="px-6 py-4 text-gray-900 font-medium">
                                     {{item.totalEarnings}} ₹
@@ -158,89 +162,62 @@
                             </tr>
 
 
-                        </tbody>
+                        </tbody> 
                     </table>
                 </div>
 
             </div>
-            <div class="flex space-x-10 mb-10 mt-5">
-                <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  p-5 ">
-                    <app-barchart></app-barchart>
-                </div>
-                <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  overflow-y-auto  h-96 ">
-                    <div class="text-base font-bold text-black m-5">expert request</div>
-                    <table
-                        class="w-fit m-5 text-sm text-left border-3 brightness-95 border-green-50  text-gray-500 dark:text-gray-400 ">
-                        <thead class="text-xs  text-white uppercase   bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
-                            <tr>
-                                <th scope="col" class="px-6 py-3">
-                                    No
-                                </th>
-                                <th scope="col" class="px-6 py-3">
-                                    Name
-                                </th>
-                                <th scope="col" class="px-6 py-3">
-                                    catagory
-                                </th>
-                                <th scope="col" class="px-6 py-3">
-                                    Experiance
-                                </th>
-                                <th scope="col" class="px-6 py-3">
-                                    Date
-                                </th>
-                                <th scope="col" class="px-6 py-3">
-                                    verify
-                                </th>
-
-
+            <div class="flex justify-center space-x-10 mb-10 mt-5">
+                
+                <div class="mt-5 rounded-2xl shadow-lg border w-fit overflow-y-auto h-96">
+                    <div class="text-base font-bold text-black m-5">Expert Request</div>
+                    <table class="w-fit m-5 text-sm text-left border-3 brightness-95 border-green-50 text-gray-500 dark:text-gray-400">
+                      <thead class="text-xs text-white uppercase bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
+                        <tr>
+                          <th scope="col" class="px-6 py-3">No</th>
+                          <th scope="col" class="px-6 py-3">Name</th>
+                          <th scope="col" class="px-6 py-3">Category</th>
+                          <th scope="col" class="px-6 py-3">Experience</th>
+                          <th scope="col" class="px-6 py-3">Date</th>
+                          <th scope="col" class="px-6 py-3">Verify</th>
+                        </tr>
+                      </thead>
+                  
+                      <tbody>
+                        <ng-container *ngIf="unverifiedExperts?.length != 0; else noContent">
+                          <ng-container *ngFor="let item of unverifiedExperts; let i = index">
+                            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
+                              <td class="px-6 py-4 text-gray-900 font-medium">{{ i + 1 }}</td>
+                              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ item.name }}</td>
+                              <td class="px-6 py-4 text-gray-900 font-medium">{{ item.specialization }}</td>
+                              <td class="px-6 py-4 text-gray-900 font-medium">{{ item.experience }}</td>
+                              <td class="px-6 py-4 text-gray-900 font-medium">{{ item.joined | date }}</td>
+                              <td class="px-6 py-4 text-gray-900 font-medium">
+                                <button class="bg-orange-500 text-white px-2 py-1.5 rounded-md text-xs" (click)="verifyExpert(item._id)">
+                                  Verify
+                                </button>
+                              </td>
                             </tr>
-                        </thead>
-
-                        <tbody>
-                            <ng-container *ngIf="unverifiedExperts.length!=0">
-                                <ng-container *ngFor="let item of unverifiedExperts; let i=index">
-                                    <tr
-                                        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
-                                        <td class="px-6 py-4 text-gray-900 font-medium">
-                                            {{i+1}}
-                                        </td>
-                                        <td
-                                            class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                            {{item.name}}
-                                        </td>
-                                        <td class="px-6 py-4 text-gray-900 font-medium ">
-                                            {{item.specialization}}
-                                        </td>
-                                        <td class="px-6 py-4 text-gray-900 font-medium">
-                                            {{item.experience}}
-                                        </td>
-                                        <td class="px-6 py-4 text-gray-900 font-medium">
-
-                                            {{item.joined|date}}
-                                        </td>
-                                        <td class="px-6 py-4 text-gray-900 font-medium">
-
-                                            <button class="bg-orange-500 text-white px-2 py-1.5 rounded-md text-xs "
-                                                (click)="verifyExpert(item._id)">Verify</button>
-                                        </td>
-
-
-                                    </tr>
-
-
-
-                                </ng-container>
-
-                            </ng-container>
-
-
-                        </tbody>
-
-
+                          </ng-container>
+                        </ng-container>
+                      </tbody>
                     </table>
-                </div>
+                  
+                    <ng-template #noContent>
+                        <tr>
+                          <td colspan="6">
+                            <div class="flex items-center justify-center h-56">
+                              <p class="text-gray-950 font-bold">No unverified experts found.</p>
+                            </div>
+                          </td>
+                        </tr>
+                      </ng-template>
+                      
+                  </div>
+                  
+                  
             </div>
 
         </main>
-    </ng-container>
+    <!-- </ng-container> -->
 </div>
