--- a/src/app/component/admin/flag/flag.component.html
+++ b/src/app/component/admin/flag/flag.component.html
@@ -54,17 +54,17 @@
                         </td>
                         <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                             <!-- {{item.content}} -->
-                            {{item.user.name}}
+                            {{item.user?.name}}
 
                             <!-- <a routerLink=" (click)="openModal()" ">Product Detail</a> -->
                         </td>
                         <td class="px-6 py-4 text-gray-900 font-medium ">
-                            {{item.timestamp|date:'MM/d/yyy'}}
+                            {{item?.timestamp|date:'MM/d/yyy'}}
                         </td>
                         <!-- <ng-container *ngFor="let rslt of item.flags"> -->
                         <td class="px-6 py-4 text-gray-900 font-medium">
 
-                            {{item.flagsCount}}
+                            {{item?.flagsCount}}
 
                         </td>
                         <!-- </ng-container> -->
@@ -230,93 +230,61 @@
                 <div *ngIf="thoughts"
                     class="modal-container bg-white rounded-lg shadow-lg transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
                     <!-- Modal content -->
-                    <div>
-                        <div class="flex justify-end mr-5 mb-0 pb-0">
-                            <button class="btn-primary mt-4" (click)="closeModal1()"><svg
-                                    class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true"
-                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="1" d="m13 7-6 6m0-6 6 6m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                                </svg></button>
-                        </div>
-                        <div class="w-[500px]  h-fit p-10 pt-5 ">
-                            <!-- starting of thoughts -->
-
-                            <p-card>
-                                <div class="flex" class="-mt-6 mb-3 pb-8 ">
-                                    <div class="-pt-3 -ml-72 ">
-                                        <ng-container *ngFor="let item of thoughts.post.tags">
-                                            <p-tag class="-mr-3 ml-4 "
-                                                [style]="{ 'background': 'linear-gradient(-225deg,#AC32E4 0%,#7918F2 48%,#4801FF 100%)'}">
-                                                <div class="flex align-items-center ">
-
-                                                    <span class="text-[10px]   font-medium">{{item}}</span>
-
-                                                </div>
-                                            </p-tag>
-                                        </ng-container>
-                                    </div>
-                                </div>
-                                <div class="flex">
-                                    <div></div>
-                                    <div class="pb-5 -mt-6">
-                                        <img class=" w-8 h-8 p-1 rounded-full ring-2 ring-gray-300 dark:ring-gray-500"
-                                            src="/docs/images/people/profile-picture-5.jpg" alt="Bordered avatar">
-
-                                    </div>
-                                    <div class="pb-5 -ml-12 -mt-6 pl-3 w-1/3">
-                                        <p class="text-sm font-bold">{{thoughts.post.user.name}}</p>
-                                        <p class="text-[10px] font-medium text-slate-500">
-                                            <span> {{thoughts.post.timestamp |date:'MMM d'}}</span>
-                                        </p>
-                                    </div>
-
-
-
-                                </div>
-                                <div class="flex -mt-1">
-                                    <div class="ml-2">
-
-                                        {{thoughts.post.content}}
-
-                                    </div>
-                                </div>
-
-                                <div class="pt-5 -pb-3  pl-2">
-                                    <div class="flex">
-                                        <div class="flex">
-                                            <button (click)="AddLike()">
-                                                <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true"
-                                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 21 19">
-                                                    <path stroke="currentColor" stroke-linecap="round"
-                                                        stroke-linejoin="round" stroke-width="1"
-                                                        d="M11 4C5.5-1.5-1.5 5.5 4 11l7 7 7-7c5.458-5.458-1.542-12.458-7-7Z" />
-                                                </svg>
-                                            </button>
-                                            <span class="pl-2 -pt-2 text-gray-800 text-sm">{{thoughts.likeCount}}</span>
+                    <div class="flex justify-center">
+                        <div class="w-full max-w-md p-4 sm:w-[500px]">
+                            <div class="flex justify-end mb-4">
+                                <button class="btn-primary" (click)="closeModal1()">
+                                    <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="m13 7-6 6m0-6 6 6m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                                    </svg>
+                                </button>
+                            </div>
+                            <div class="bg-white shadow rounded-lg p-6 sm:p-10">
+                                <!-- starting of thoughts -->
+                                <p-card>
+                                    <div class="flex mb-3">
+                                        <div class="flex flex-wrap space-x-2">
+                                            <ng-container *ngFor="let item of thoughts.post.tags">
+                                                <p-tag class="mr-2 mb-2"
+                                                    [style]="{ 'background': 'linear-gradient(-225deg,#AC32E4 0%,#7918F2 48%,#4801FF 100%)'}">
+                                                    <div class="flex items-center">
+                                                        <span class="text-xs font-medium">{{item}}</span>
+                                                    </div>
+                                                </p-tag>
+                                            </ng-container>
                                         </div>
-                                        <div class="flex pl-3">
-                                            <svg class="w-5 h-5 cursor-pointer   text-gray-800 dark:text-white"
-                                                (click)="showComment()" aria-hidden="true"
-                                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 18">
-                                                <path stroke="currentColor" stroke-linecap="round"
-                                                    stroke-linejoin="round" stroke-width="1"
-                                                    d="m1 14 3-3m-3 3 3 3m-3-3h16v-3m2-7-3 3m3-3-3-3m3 3H3v3" />
+                                    </div>
+                                    <div class="flex items-center mb-3">
+                                        <img class="w-8 h-8 p-1 rounded-full ring-2 ring-gray-300 dark:ring-gray-500" src="/docs/images/people/profile-picture-5.jpg" alt="Bordered avatar">
+                                        <div class="ml-3">
+                                            <p class="text-sm font-bold">{{thoughts.post.user?.name}}</p>
+                                            <p class="text-xs font-medium text-slate-500">
+                                                <span>{{thoughts.post?.timestamp | date:'MMM d'}}</span>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <p>{{thoughts.post.content}}</p>
+                                    </div>
+                                    <div class="flex items-center space-x-4">
+                                        <button (click)="AddLike()" class="flex items-center space-x-1">
+                                            <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 21 19">
+                                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M11 4C5.5-1.5-1.5 5.5 4 11l7 7 7-7c5.458-5.458-1.542-12.458-7-7Z" />
                                             </svg>
-                                            <span
-                                                class="pl-2 -pt-2 text-gray-800 text-sm">{{thoughts.commentCount}}</span>
-
-
-                                        </div>
+                                            <span class="text-sm text-gray-800">{{thoughts.likeCount}}</span>
+                                        </button>
+                                        <button (click)="showComment()" class="flex items-center space-x-1">
+                                            <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 18">
+                                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="m1 14 3-3m-3 3 3 3m-3-3h16v-3m2-7-3 3m3-3-3-3m3 3H3v3" />
+                                            </svg>
+                                            <span class="text-sm text-gray-800">{{thoughts.commentCount}}</span>
+                                        </button>
                                     </div>
-                                </div>
-                            </p-card>
-
-
-
+                                </p-card>
+                            </div>
                         </div>
-
                     </div>
+                    
                 </div>
             </div>
         </div>
